fixed sendgrid - renamed "name" fields

--- a/BugSmear.Tests/App.config
+++ b/BugSmear.Tests/App.config
@@ -5,7 +5,9 @@
 -->
 <configuration>
     <appSettings>
-
+      <add key="SendgridUsername" value="markegaines@gmail.com" />
+      <add key="SendgridPassword" value="Plugh4plover" />
+      <add key="ContactEmail" value="markegaines@gmail.com" />
     </appSettings>
 
     <connectionStrings>
