--- a/BugSmear/Web.config
+++ b/BugSmear/Web.config
@@ -16,9 +16,9 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="SendgridUsername" value="markegaines@gmail.com" />
-    <add key="SendgridPassword" value="Plugh4plover" />
-    <add key="ContactEmail" value="markegaines@gmail.com" />
+    <add key="SendgridUsername" value="userid" />
+    <add key="SendgridPassword" value="password" />
+    <add key="ContactEmail" value="user@gmail.com" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
