--- a/BugSmear/Web.config
+++ b/BugSmear/Web.config
@@ -17,7 +17,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="SendgridUsername" value="userid" />
-    <add key="SendgridPassword" value="password" />
+    <add key="SendgridPassword" value="password1" />
     <add key="ContactEmail" value="user@gmail.com" />
   </appSettings>
   <system.web>
