--- a/BugSmear/BugSmear.csproj
+++ b/BugSmear/BugSmear.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\ProjectUsersViewModel.cs" />
+    <Compile Include="Models\TicketsTicketAttachments.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -372,6 +373,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Uploads\tickets\images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
