removing configs from git

--- a/BugSmear.Tests/App.config
+++ b/BugSmear.Tests/App.config
@@ -7,7 +7,7 @@
     <appSettings>
       <add key="SendgridUsername" value="markegaines@gmail.com" />
       <add key="SendgridPassword" value="Plugh4plover" />
-      <add key="ContactEmail" value="markegaines@gmail.com" />
+      <add key="ContactEmail" value="g@gmail.com" />
     </appSettings>
 
     <connectionStrings>
