remove all .config

--- a/BugSmear.Tests/App.config
+++ b/BugSmear.Tests/App.config
@@ -5,9 +5,9 @@
 -->
 <configuration>
     <appSettings>
-      <add key="SendgridUsername" value="markegaines@gmail.com" />
-      <add key="SendgridPassword" value="Plugh4plover" />
-      <add key="ContactEmail" value="g@gmail.com" />
+      <add key="SendgridUsername" value="nope" />
+      <add key="SendgridPassword" value="nope" />
+      <add key="ContactEmail" value="g@nope.com" />
     </appSettings>
 
     <connectionStrings>
