testing Git for .config supression

--- a/BugSmear.Tests/App.config
+++ b/BugSmear.Tests/App.config
@@ -7,7 +7,7 @@
     <appSettings>
       <add key="SendgridUsername" value="nope" />
       <add key="SendgridPassword" value="nope" />
-      <add key="ContactEmail" value="g@nope.com" />
+      <add key="ContactEmail" value="nope" />
     </appSettings>
 
     <connectionStrings>
