--- a/BugSmear/Web.config
+++ b/BugSmear/Web.config
@@ -16,8 +16,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="SendgridUsername" value="userid" />
-    <add key="SendgridPassword" value="password1" />
+    <add key="SendgridUsername" value="userid2" />
+    <add key="SendgridPassword" value="password2" />
     <add key="ContactEmail" value="user@gmail.com" />
   </appSettings>
   <system.web>
