move to azure - fix null attachments

--- a/BugSmear/BugSmear.csproj
+++ b/BugSmear/BugSmear.csproj
@@ -278,6 +278,9 @@
     <Content Include="ClassDiagram1.cd" />
     <Content Include="Content\DataTables\css\dataTables.responsive.scss" />
     <Content Include="Content\DataTables\css\dataTables.jqueryui.scss" />
+    <None Include="Properties\PublishProfiles\mgaines-BugSMEAR.pubxml">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <Content Include="Icon.png" />
     <Content Include="Scripts\bootstrap.js" />
@@ -320,6 +323,15 @@
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="Uploads\tickets\images\AlpinaCarousel_1.jpg" />
+    <Content Include="Uploads\tickets\images\BingPage.jpg" />
+    <Content Include="Uploads\tickets\images\CreateTicketFailure.jpg" />
+    <Content Include="Uploads\tickets\images\dsc04011.jpg" />
+    <Content Include="Uploads\tickets\images\GooglePage.jpg" />
+    <Content Include="Uploads\tickets\images\IM_A0044.JPG" />
+    <Content Include="Uploads\tickets\images\IM_A0061.JPG" />
+    <Content Include="Uploads\tickets\images\markie &amp; grandma look out the window.jpg" />
+    <Content Include="Uploads\tickets\images\UpdateTicketFailure.jpg" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -328,6 +340,7 @@
     </Content>
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
@@ -364,16 +377,17 @@
     <Content Include="Views\Projects\Edit.cshtml" />
     <Content Include="Views\Projects\Index.cshtml" />
     <Content Include="Views\Tickets\Create.cshtml" />
-    <Content Include="Views\Tickets\Delete.cshtml" />
+    <Content Include="Views\Tickets\RemoveAttachment.cshtml" />
     <Content Include="Views\Tickets\Details.cshtml" />
     <Content Include="Views\Tickets\Edit.cshtml" />
     <Content Include="Views\Tickets\Index.cshtml" />
     <Content Include="Views\ProjectUsers\AssignUsers.cshtml" />
     <Content Include="Views\ProjectUsers\RemoveUsers.cshtml" />
+    <Content Include="Views\Tickets\DeleteComment.cshtml" />
+    <Content Include="Views\Tickets\EditComment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Uploads\tickets\images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
