--- a/BugSmear/Web.config
+++ b/BugSmear/Web.config
@@ -9,15 +9,16 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;          Initial Catalog=mgaines-BugSmear;          Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;          Initial Catalog=mgaines-BugSmear;          Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Server=tcp:mbmuw7kmu9.database.windows.net,1433;Database=mgaines-BugSMEAR-db;User ID=CoderFoundry@mbmuw7kmu9;Password=LearnToCode1;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="SendgridUsername" value="userid2" />
-    <add key="SendgridPassword" value="password2" />
+    <add key="SendgridUsername" value="userid3" />
+    <add key="SendgridPassword" value="password3" />
     <add key="ContactEmail" value="user@gmail.com" />
   </appSettings>
   <system.web>
