row select on tickets / datepicker for duedate

--- a/BugSmear/BugSmear.csproj
+++ b/BugSmear/BugSmear.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ProjectsController.cs" />
     <Compile Include="Controllers\ProjectUsersController.cs" />
+    <Compile Include="Controllers\TicketHistoriesController.cs" />
     <Compile Include="Controllers\TicketsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -236,6 +237,7 @@
     <Content Include="Content\DataTables\css\dataTables.scroller.min.css" />
     <Content Include="Content\DataTables\css\dataTables.tableTools.css" />
     <Content Include="Content\DataTables\css\dataTables.tableTools.min.css" />
+    <Content Include="Content\jquery-ui.min.css" />
     <Content Include="Content\DataTables\css\jquery.dataTables.css" />
     <Content Include="Content\DataTables\css\jquery.dataTables.min.css" />
     <Content Include="Content\DataTables\css\jquery.dataTables_themeroller.css" />
@@ -3356,6 +3358,7 @@
     <Content Include="Views\Tickets\EditComment.cshtml" />
     <Content Include="Views\ProjectUsers\AssignRemoveUsers.cshtml" />
     <Content Include="Views\ProjectUsers\AssignRemoveUsersTEST.cshtml" />
+    <Content Include="Views\TicketHistories\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
